--- a/ch/stuff/traditions.html
+++ b/ch/stuff/traditions.html
@@ -65,6 +65,38 @@
                 <h1>传统</h1>
                 <article>
                     <div class="content content--trad">
+                        <h2>Christmas time in Poland</h2>
+                        <p class="data"> 28.12.2020 | author: <a href="../about.html" target="_blank"
+                                class="author">@Lena</a></p><br>
+                        <div class="container__trad container__trad--item">
+                            <div class="container__trad">
+                                <img src="./../../assets/img/articles/traditions/28.12.2020/xmas1.JPG"
+                                    alt="Christmas decorations on the streets" class="image-right__center">
+                                <img src="./../../assets/img/articles/traditions/28.12.2020/xmas2.jpg"
+                                    alt="Christmas tree" class="image-left__center">
+                                <p>在波兰，圣诞夜有一些传统，波兰人一直在延续这些传统。让我们来看看都有些什么！</p>
+                                    <ul class="xmas">
+                                        <li>12道菜（dwanaście potraw）：这个传统来自圣经。我们用这12道菜纪念耶稣基督的12个门徒。</li>
+                                    </ul>
+                                    <span class="dots">(...)</span>
+                                </p>
+                                <div class="more">
+                                    <img src="./../../assets/img/articles/traditions/28.12.2020/xmas3.jpg"
+                                        alt="The Holy Family" class="image-right__center">
+                                    <p>在这些菜中，因为在波兰不同的区域，汤会有所不同，比如我们可以看到用红色甜菜根做的汤(barszcz czerwony)，或鱼汤(zupa rybna)。</p>
+                                        <ul class="xmas">
+                                            <li>在白色桌布下，波兰的家庭会放上干草(sianko)。这是用来象征耶稣基督的出生地是伯利恒(Betlejem)马厩(stajenka)。</li>
+                                            <li>另一个餐具的传统是在圣诞夜坐下享用晚餐前，我们会为流浪汉准备一套餐具。在这个特殊的夜晚，没有人应该孤单或者饿着肚子在外漂泊。</li>
+                                            <li>分享华夫dzielenie się opłatkiem和圣诞华夫opłatek，用来表示和解和原谅。当我们和其他人分享这些时，我们向他们致以特别的问候。</li>
+                                            <li>圣诞树(choinka)，这不是波兰人的传统，但现在在每个人的家里都会在圣诞节期间放上圣诞树。这可以是天然的树，也可以是人造的。我们放上闪亮的圆球(bombki)，和装饰条(łańcuchy)。闪亮的圆球(bombki)代表伊甸园的果实（在过去，人们把水果比如苹果或橙子挂在圣诞树上）。装饰条(łańcuchy)提醒我们罪恶的存在，并使家庭成员之间的关系更加紧密。在圣诞树的最上面，我们会放上代表伯利恒的星星(gwiazda betlejemska)。为了圣诞夜，一家人一起装饰圣诞树和准备食物一样，可以让家庭成员聚在一起。</li>
+                                        </ul>
+                                        <p>波兰的圣诞节和美国的圣诞节有什么不同呢？在波兰我们12月24日圣诞夜(wigilia)聚在一起，在看了天上的第一颗星星后，我们坐到桌边，分享我们的圣诞华夫opłatek，然后再吃晚餐。晚餐后，我们从圣诞树下拿走事先放在那的属于我们各自的礼物。
+                                    </p>
+                                </div>
+                                <button class="button__default">Read more</button>
+                            </div>
+                        </div>
+                    <div class="content content--trad">
                         <h2>国家独立日</h2>
                         <p class="data"> 2020年11月11日 | 编辑：<a href="../about.html" target="_blank"
                                 class="author">@Anna</a></p><br>
