--- a/stuff/traditions.html
+++ b/stuff/traditions.html
@@ -64,6 +64,39 @@
                 <h1>Traditions</h1>
                 <article>
                     <div class="content content--trad">
+                        <h2>Christmas time in Poland</h2>
+                        <p class="data"> 28.12.2020 | author: <a href="../about.html" target="_blank"
+                                class="author">@Lena</a></p><br>
+                        <div class="container__trad container__trad--item">
+                            <div class="container__trad">
+                                <img src="./../assets/img/articles/traditions/28.12.2020/xmas1.JPG"
+                                    alt="Christmas decorations on the streets" class="image-right__center">
+                                <img src="./../assets/img/articles/traditions/28.12.2020/xmas2.jpg"
+                                    alt="Christmas tree" class="image-left__center">
+                                <p>There are some traditions Polish people cultivate during Christmas Eve. Let’s see what they are!</p>
+                                    <ul class="xmas">
+                                        <li>12 dishes (dwanaście potraw):  the tradition came from the Bible - we are serving 12 dishes to honour 12 Apostles, the disciples of Jesus Christ.</li>
+                                    </ul>
+                                    <span class="dots">(...)</span>
+                                </p>
+                                <div class="more">
+                                    <img src="./../assets/img/articles/traditions/28.12.2020/xmas3.jpg"
+                                        alt="The Holy Family" class="image-right__center">
+                                    <p>Amongst the dishes - depending on a region of Poland - as a soup served on the table we can see e.g. red beetroot soup (barszcz czerwony) or fish soup (zupa rybna).</p>
+                                        <ul class="xmas">
+                                            <li>Under the white tablecloth Polish families put hay (sianko). It is a symbol of the stable (stajenka) in Bethlehem (Betlejem), where Jesus was born.</li>
+                                            <li>Additional tableware - before sitting to eat a dinner during Christmas Eve we place one additional tableware for a stray wanderer who can come unexpectedly. During this special night no one should be left alone or walk hungry.</li>
+                                            <li>Sharing the wafer (dzielenie się opłatkiem) - wafer (opłatek) symbolizes reconciliation (pojednanie) and forgiveness (przebaczenie). When we share it with others we wish them personalized greetings. </li>
+                                            <li>Christmas tree (choinka) - although it is not a Polish tradition, nowadays in every house Christmas tree is put for Chritmas time. It can be natural or artificial. We decorate it with baubles (bombki) and chains (łańcuchy). Bombki symbolize fruits of Eden (in the past people were actually hanging fruits like apples or oranges). Łańcuchy remind us about the sin and consolidate ties between family members. On the top of the Christmas tree we put a star what symbolizes the Star of Bethlehem (gwiazda betlejemska). Decorating the Christmas tree altogether same as preparing food for Christmas Eve unifies members of the family.</li>
+                                        </ul>
+                                        <p>What differentiates Polish Christmas from American Christmas is that in Poland we gather together in the Christmas Eve (wigilia) - 24th of December, after seeing the first star on the sky we approach the table, share the opłatek and eat the dinner. After the dinner in the very same evening we receive the gifts which previously were put under the Christmas Tree.
+                                    </p>
+                                </div>
+                                <button class="button__default">Read more</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="content content--trad">
                         <h2>National Independence Day</h2>
                         <p class="data"> 11.11.2020 | author: <a href="../about.html" target="_blank"
                                 class="author">@Anna</a></p><br>
