--- a/vi/stuff/traditions.html
+++ b/vi/stuff/traditions.html
@@ -64,6 +64,42 @@
                 <h1>Truyền thống</h1>
                 <article>
                     <div class="content content--trad">
+                        <h2>GIÁNG SINH Ở BALAN</h2>
+                        <p class="data"> 28.12.2020 | author: <a href="../about.html" target="_blank"
+                                class="author">@</a></p><br>
+                        <div class="container__trad container__trad--item">
+                            <div class="container__trad">
+                                <img src="./../../assets/img/articles/traditions/28.12.2020/xmas1.JPG"
+                                    alt="Christmas decorations on the streets" class="image-right__center">
+                                <img src="./../../assets/img/articles/traditions/28.12.2020/xmas2.jpg"
+                                    alt="Christmas tree" class="image-left__center">
+                                <p>Có một số truyền thống mà người Ba Lan thường làm trong đêm Giáng sinh. Hãy xem chúng là gì nhé!
+                                </p>
+                                    <ul class="xmas">
+                                        <li>12 món ăn (dwanaście potraw): truyền thống bắt nguồn từ Kinh thánh - chúng tôi  phục vụ 12 món ăn để tôn vinh 12 vị Tông đồ, môn đồ của Chúa Giêsu Kitô.
+                                            </li>
+                                    </ul>
+                                    <span class="dots">(...)</span>
+                                </p>
+                                <div class="more">
+                                    <img src="./../../assets/img/articles/traditions/28.12.2020/xmas3.jpg"
+                                        alt="The Holy Family" class="image-right__center">
+                                    <p>Tùy thuộc vào từng vùng của Ba Lan, trong số các món ăn, sẽ có một món súp được phục vụ trên bàn như súp củ dền đỏ (barzcz czerwony) hoặc súp cá (zupa rybna).</p>
+                                        <ul class="xmas">
+                                            <li>Dưới khăn trải bàn màu trắng các gia đình Ba Lan đặt cỏ khô (sianko). Nó là biểu tượng của chuồng ngựa (stajenka) ở Bethlehem (Betlejem), nơi Chúa Giêsu được sinh ra.</li>
+                                            <li>Một chỗ ngồi cho khách - trước khi ngồi ăn tối trong Đêm Giáng sinh, chúng tôi đặt thêm một bộ đồ ăn cho một người lang thang đi lạc có thể đến bất ngờ. Trong đêm đặc biệt này, không ai được ở một mình hoặc đi bộ khi đói.</li>
+                                            <li>Chia sẻ bánh thánh (dzielenie się opłatkiem) - bánh thánh (opłatek) tượng trưng cho sự hòa giải (pojednanie) và sự tha thứ (przebaczenie). Khi chúng tôi chia sẻ nó với những người khác, chúng tôi gửi gắm những lời chào đến họ.</li>
+                                            <li> Cây thông Noel (choinka) - mặc dù không phải là truyền thống của Ba Lan, nhưng ngày nay trong mỗi ngôi nhà, cây thông Noel đều được đặt trong dịp lễ Chritmas. Nó có thể là tự nhiên hoặc nhân tạo. Chúng tôi trang trí nó bằng đồ trang sức (bomki) và dây xích (łańcuchy). Bombki tượng trưng cho trái cây của vườn địa đàng (trong quá khứ người ta thực sự treo trái cây như táo hoặc cam). Łańcuchy nhắc nhở chúng ta về tội lỗi và củng cố mối quan hệ giữa các thành viên trong gia đình. Trên đỉnh của cây thông Noel, chúng tôi đặt một ngôi sao tượng trưng cho Ngôi sao của Bethlehem (gwiazda betlejemska). Trang trí cây thông Noel hoàn toàn giống như chuẩn bị đồ ăn cho đêm Giáng sinh để đoàn tụ các thành viên trong gia đình.
+                                            </li>
+                                        </ul>
+                                        <p>Điều khác biệt với Giáng sinh của người Ba Lan với Giáng sinh của người Mỹ là ở Ba Lan, chúng tôi quây quần bên nhau trong đêm Giáng sinh (wigilia) - ngày 24 tháng 12, sau khi nhìn thấy ngôi sao đầu tiên trên bầu trời, chúng tôi đến bàn ăn, chia sẻ món ăn và ăn tối. Sau bữa tối cùng ngày, chúng tôi nhận được những món quà mà trước đó đã được đặt dưới Cây thông Noel.
+                                    </p>
+                                </div>
+                                <button class="button__default">Xem thêm</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="content content--trad">
                         <h2>Ngày Độc Lập Quốc Gia</h2>
                         <p class="data"> 11.11.2020 | Tác giả: <a href="../about.html" target="_blank"
                                 class="author">@Anna</a></p><br>
