code review and fixed small  bugs

--- a/jp/stuff/traditions.html
+++ b/jp/stuff/traditions.html
@@ -63,7 +63,7 @@
                 <article>
                     <div class="content content--trad">
                         <h2>ポーランドのクリスマス</h2>
-                        <p class="data"> 2020年12月28日 |  作成者:  <a href="../about.html" target="_blank"
+                        <p class="data"> 2020年12月28日 | 作成者: <a href="../about.html" target="_blank"
                                 class="author">@レナ</a></p><br>
                         <div class="container__trad container__trad--item">
                             <div class="container__trad">
@@ -72,31 +72,42 @@
                                 <img src="./../../assets/img/articles/traditions/28.12.2020/xmas2.jpg"
                                     alt="Christmas tree" class="image-left__center">
                                 <p>ポーランドにはいくつかの伝統的なクリスマス・イヴの過ごし方があります。では、さっそくご紹介していきましょう！</p>
-                                    <ul class="xmas">
-                                        <li>12皿( dwanaście potraw )：この伝統は聖書からきたものです。これは、キリストの弟子である12人の使徒を称えるために12の料理を提供するというものです。</li>
-                                    </ul>
-                                    <span class="dots">(...)</span>
+                                <ul class="xmas">
+                                    <li>12皿( dwanaście potraw
+                                        )：この伝統は聖書からきたものです。これは、キリストの弟子である12人の使徒を称えるために12の料理を提供するというものです。</li>
+                                </ul>
+                                <span class="dots">(...)</span>
                                 </p>
                                 <div class="more">
                                     <img src="./../../assets/img/articles/traditions/28.12.2020/xmas3.jpg"
                                         alt="The Holy Family" class="image-right__center">
-                                    <p> ポーランドの地域ごとによりますが、スープでいうとビーツのスープ (barszcz czerwony) や魚のスープ (zupa rybna)などがテーブルに並びます。</p>
-                                        <ul class="xmas">
-                                            <li>　ポーランドの家庭では、白いテーブルクロスの下に干し草 (sianko) を置きます。これは、キリストが生まれたベツレヘム（ Betlejem ）の厩舎（ stajenka) のシンボルです。</li>
-                                            <li>追加の食器を用意しておく。：クリスマス・イブの夕食を始める前に、食器を一組多く用意しておきます。 これは、予期せず来るかもしれない迷子の人や放浪者のためのもので、特別な夜の間は誰も一人にされたり、空腹で歩いたりしてはいけないという思いやりの行動です。</li>
-                                            <li>ウエハース(聖餅)をシェアする。：ウエハース (opłatek)は、和解 (pojednanie)と許し (przebaczenie)を象徴する食べ物です。これを他の人とシェアするときは、その人の幸せを願います。</li>
-                                            <li>クリスマスツリー (choinka)：これはポーランドの伝統ではありませんが、現在ではほとんどの家庭でとツリーを飾ります。ツリーは本物の木でも人工的な木でも構いません。ツリーの装飾は、クーゲル (bombki) (玉型のオーナメント)やチェーン (łańcuchy)  などです。 クーゲルはエデンの果物を意味しています。（昔の人々は実際にリンゴやオレンジのような果物をぶら下げていたそうです。）</li>
-                                        </ul>
-                                        <p>ここで、ポーランドとアメリカのクリスマスの違いについて少しだけお話します。ポーランドでは、クリスマスイブ (wigilia) に集まるのが一般的です。12月24日、空に一番目の星が現れた後、テーブルにつき、ウエハース( opłatek )をみんなでシェアしてからディナーを食べます。そして夕食の後、事前に用意しておいたツリーの下に置かれていたプレゼントを受け取っていきます。
+                                    <p> ポーランドの地域ごとによりますが、スープでいうとビーツのスープ (barszcz czerwony) や魚のスープ (zupa
+                                        rybna)などがテーブルに並びます。</p>
+                                    <ul class="xmas">
+                                        <li>　ポーランドの家庭では、白いテーブルクロスの下に干し草 (sianko) を置きます。これは、キリストが生まれたベツレヘム（ Betlejem
+                                            ）の厩舎（ stajenka) のシンボルです。</li>
+                                        <li>追加の食器を用意しておく。：クリスマス・イブの夕食を始める前に、食器を一組多く用意しておきます。
+                                            これは、予期せず来るかもしれない迷子の人や放浪者のためのもので、特別な夜の間は誰も一人にされたり、空腹で歩いたりしてはいけないという思いやりの行動です。
+                                        </li>
+                                        <li>ウエハース(聖餅)をシェアする。：ウエハース (opłatek)は、和解 (pojednanie)と許し
+                                            (przebaczenie)を象徴する食べ物です。これを他の人とシェアするときは、その人の幸せを願います。</li>
+                                        <li>クリスマスツリー
+                                            (choinka)：これはポーランドの伝統ではありませんが、現在ではほとんどの家庭でとツリーを飾ります。ツリーは本物の木でも人工的な木でも構いません。ツリーの装飾は、クーゲル
+                                            (bombki) (玉型のオーナメント)やチェーン (łańcuchy) などです。
+                                            クーゲルはエデンの果物を意味しています。（昔の人々は実際にリンゴやオレンジのような果物をぶら下げていたそうです。）</li>
+                                    </ul>
+                                    <p>ここで、ポーランドとアメリカのクリスマスの違いについて少しだけお話します。ポーランドでは、クリスマスイブ (wigilia)
+                                        に集まるのが一般的です。12月24日、空に一番目の星が現れた後、テーブルにつき、ウエハース( opłatek
+                                        )をみんなでシェアしてからディナーを食べます。そして夕食の後、事前に用意しておいたツリーの下に置かれていたプレゼントを受け取っていきます。
                                     </p>
                                 </div>
-                                <button class="button__default">Read more</button>
+                                <button class="button__default">さらに読む</button>
                             </div>
                         </div>
                     </div>
                     <div class="content content--trad">
                         <h2>独立記念日</h2>
-                        <p class="data"> 2020年11月11日 |  作成者: <a href="../about.html" target="_blank"
+                        <p class="data"> 2020年11月11日 | 作成者: <a href="../about.html" target="_blank"
                                 class="author">@アンナ</a></p><br>
                         <div class="container__trad container__trad--item">
                             <div class="container__trad">
@@ -278,7 +289,8 @@
                                     市民の死亡者数は18万人から25万人の間であると推定され、鎮圧後約70万人の住民は町から追放された。<br>
                                     また、蜂起に巻き込まれた約200名のドイツ人民間人が国内軍に処刑されたと言われている。国内軍は1万6000人、ドイツ軍は2000名の戦死者を出した。<br>
                                     <br>
-                                    一連の戦闘により、ワルシャワの市街地はほぼ完全に破壊され、歴史的建造物や文書などの文化遺産の多くが失われた。ワルシャワの再建には長い年月を要することとなる。</p>
+                                    一連の戦闘により、ワルシャワの市街地はほぼ完全に破壊され、歴史的建造物や文書などの文化遺産の多くが失われた。ワルシャワの再建には長い年月を要することとなる。
+                                </p>
 
                                 <div class="source">
                                     <i>引用 <a href="https://en.wikipedia.org/wiki/Warsaw_Uprising"
