--- a/jp/index.html
+++ b/jp/index.html
@@ -88,7 +88,7 @@
                                         class="image-left__center" />
                                     <p>
                                         シェシチ！ <br>
-                                        さん、今年のクリスマスいかがでしたか？
+                                        皆さん、今年のクリスマスいかがでしたか？
                                         コロナ禍で例年とは違う、特別なクリスマスでしたね◎ <br>
                                         さて、少し遅くなりましたがSAROからもクリスマスプレゼントとして、
                                         新しいレッスンとコラムを皆さまに差し上げます！
