--- a/lessons.html
+++ b/lessons.html
@@ -1459,7 +1459,8 @@
               Does Anna work at a bank?<br>
             </p>
             <h3>2. Open questions</h3>
-            <p>These are used for inquiring about something in more detail. The most common “question words”, also called interrogative pronouns - zaimki pytające - are:
+            <p>These are used for inquiring about something in more detail. The most common “question words”, also
+              called interrogative pronouns - zaimki pytające - are:
             </p>
             <ul>
               <li>Co? - What?</li>
@@ -1475,36 +1476,366 @@
             </ul>
             <p>The usual word order is the same as normally, with a question worded added at the beginning: <br><br>
               Question word + (subject) + verb + object <br><br>
-              Note: only include the subject if it is not known from context. Do not use 2nd person: ty (you, singular) or wy (you, plural) explicitly. <br><br>
-              The usage does not different in different tenses: past, present and future sentences all have the same question structure.
+              Note: only include the subject if it is not known from context. Do not use 2nd person: ty (you, singular)
+              or wy (you, plural) explicitly. <br><br>
+              The usage does not different in different tenses: past, present and future sentences all have the same
+              question structure.
             </p>
             <ul>
               <li><b>Co</b> (ty) chcesz na prezent? - What do you want as a present?</li>
-              <li><b>Gdzie</b> mieszka <span lang="pl">twój</span> brat? - Where does your brother live? (being in a place)</li>
-              <li><span lang="pl"><b>Dokąd</b></span> jedziecie na wakacje? - Where are you going for holidays? (movement to a place)</li>
+              <li><b>Gdzie</b> mieszka <span lang="pl">twój</span> brat? - Where does your brother live? (being in a
+                place)</li>
+              <li><span lang="pl"><b>Dokąd</b></span> jedziecie na wakacje? - Where are you going for holidays?
+                (movement to a place)</li>
               <li><b>Kiedy</b> <span lang="pl">dostałeś tę paczkę</span>? - When did you get this parcel?</li>
               <li><b>Jak</b> <span lang="pl">upiekłeś</span> to ciasto? - How did you bake this cake?</li>
-              <li><b>Jakie</b> filmy lubisz <span lang="pl">oglądać</span>? - What kind of films do you enjoy watching? *</li>
-              <li><span lang="pl"><b>Którą</b> porę</span> roku lubisz najbardziej? - Which season of the year do you like the most? *</li>
-              <li><b>Dlaczego</b> <span lang="pl">wyjechałaś za granicę</span>? - Why did you go abroad (emigrate)? (what is the reason?)</li>
+              <li><b>Jakie</b> filmy lubisz <span lang="pl">oglądać</span>? - What kind of films do you enjoy watching?
+                *</li>
+              <li><span lang="pl"><b>Którą</b> porę</span> roku lubisz najbardziej? - Which season of the year do you
+                like the most? *</li>
+              <li><b>Dlaczego</b> <span lang="pl">wyjechałaś za granicę</span>? - Why did you go abroad (emigrate)?
+                (what is the reason?)</li>
               <li><b>Po co</b> Robert jedzie do Warszawy? - What is Robert going to Warsaw for? (what is his aim?)</li>
               <li><b>Ile</b> mleka mamy w domu? - How much milk do we have in our house?</li>
             </ul>
-            <p>* These 2 interrogative pronouns are subject to declension. See the declension table to find out which form to use. <br><br><br>
-              When using the verb to be with the pronouns <i>kiedy, gdzie, jaki, który</i>, the verb and the subject are usually reversed. The order is: <br><br>
-              Question word +  verb + (subject) + object <br><br>
+            <p>* These 2 interrogative pronouns are subject to declension. See the declension table to find out which
+              form to use. <br><br><br>
+              When using the verb to be with the pronouns <i>kiedy, gdzie, jaki, który</i>, the verb and the subject are
+              usually reversed. The order is: <br><br>
+              Question word + verb + (subject) + object <br><br>
               Gdzie jest twoja siostra? - Where is your sister? <br>
               NOT Gdzie twoja siostra jest? <br><br>
               Kiedy jest jej <span lang="pl">ślub</span>? - When is her wedding? <br>
-NOT Kiedy jej <span lang="pl">ślub</span> jest? <br><br>
-These are the most common questions you will use - they cover the most of daily situations.Now, it’s your turn to practice asking them! Try to turn the sentences from previous lessons into sentences first, and when you gain confidence, you can start asking your own. As the proverb says - <i>nie ma głupich pytań! (There are no stupid questions!)</i>
-
-
-              </p>
-
+              NOT Kiedy jej <span lang="pl">ślub</span> jest? <br><br>
+              These are the most common questions you will use - they cover the most of daily situations.Now, it’s your
+              turn to practice asking them! Try to turn the sentences from previous lessons into sentences first, and
+              when you gain confidence, you can start asking your own. As the proverb says - <i>nie ma głupich pytań!
+                (There are no stupid questions!)</i>
+            </p>
             <div class="sign">
               <p class="sign--person">written by</p>
               <a href="about.html" target="_blank">@Weronika</a>
+            </div>
+          </div>
+        </div>
+        <div class="container">
+          <button class="acc lesson lesson--personalPronouns1">Personal pronouns – basic information part 1</button>
+          <div class="panel">
+            <h2>Personal pronouns – basic information part 1</h2>
+            <p>In this lesson you will learn about personal pronouns. Easy part – new words they are relatively easy to
+              learn. Difficult part – they decline depending the on the context. Declination forms will be shown in part
+              2 of this lesson.
+            </p>
+            <p>Let’s not get ahead of things and start with the basics. Polish pronouns look as follows:</p>
+            <table style="width:80%">
+              <tr>
+                <th>Singular</th>
+                <th>Plural</th>
+                <th>Questions</th>
+              </tr>
+              <tr>
+                <td>
+                  I – ja<br>
+                  You – ty<br>
+                  He – on<br>
+                  She – ona
+                </td>
+                <td>
+                  It - ono We – my<br>
+                  You – wy<br>
+                  They – oni / one Who? – Kto?
+                </td>
+                <td>
+                  No one / nobody – nikt<br>
+                  Co? – What?<br>
+                  Nothing – nic
+                </td>
+              </tr>
+            </table>
+            <p>
+              When it comes to a gender, only on, ona and oni/one indicate it. Oni is used for all-male or mixed male
+              and female groups, while one is for all-female groups.
+              <br><br><br>
+              Pronouns are usually omitted it the subject is known from the context: <br><br>
+              A: Co (ty) robisz po pracy? / What do you do after work? <br>
+              B: (Ja) jem obiad i jadę na lekcję tańca. / I eat dinner and go to dancing class. <br>
+              However, if the speaker needs a specific information on who is doing something, you might want to add
+              it:<br>
+              A: Kto dzisiaj robi obiad? / Who is making dinner today?<br>
+              B: <span lang="pl">Ja robię! </span>/ I am!
+              <br><br><br>
+              After kto we usually use a verb in the singular third person form, while after nikt and nic we use a verb
+              in negative form. <br>
+              A: Kto gra na gitarze? / Who is playing the guitar?<br>
+              B: Nikt nie gra. / No one is playing.After kto we usually use a verb in the singular third person form,
+              while after nikt and nic we use a verb in negative form. <br>
+              A: Kto gra na gitarze? / Who is playing the guitar?<br>
+              B: Nikt nie gra. / No one is playing. <br><br><br>
+              A: Co (ty) robisz? / What are you doing?<br>
+              B: <span lang="pl">Nic (nie robię).</span> / (I’m doing) nothing.<br><br><br>
+              All pronouns above are informal – below you will see more formal and polite versions:
+            </p>
+            <table style="width:80%">
+              <tr>
+                <td>Singular</td>
+                <td>Plural</td>
+              </tr>
+              <tr>
+                <td>
+                  Mr./Sir/you (formal) – Pan <br>
+                  Ms./Mrs./Madam/you (formal) - Pani
+                </td>
+                <td>
+                  Sirs/you (formal) – Panowie <br>
+                  Madams/you (formal) – Panie <br>
+                  Ladies and gentlemen, Mr. And Mrs., you (formal) - Państwo
+                </td>
+              </tr>
+            </table>
+            <p>
+              Formal pronouns are used when talking to strangers, to people older than yourself or with higher position
+              (a boss, a supervisor, a teacher).
+              <br><br><br>
+              That's all for part 1 – if you are curious about declination of personal pronouns, see <a
+                href="#personalPronouns2">part 2</a>.
+            </p>
+            <div class="sign">
+              <p class="sign--person">written by</p>
+              <a href="about.html" target="_blank">@</a>
+            </div>
+          </div>
+        </div>
+        <div class="container">
+          <button class="acc lesson lesson--personalPronouns2" id="personalPronouns2">Personal pronouns – basic
+            information part 2</button>
+          <div class="panel">
+            <h2>Personal pronouns – basic information part 2</h2>
+            <p>Below you will see how personal pronouns are changing depending on a case. <br><br><br>
+              Singular, 1st an 2nd person:
+            </p>
+            <table style="width:80%">
+              <tr>
+                <td>Nominative</td>
+                <td>Genitive</td>
+                <td>Dative</td>
+                <td>Accusative</td>
+                <td>Instrumental</td>
+                <td>Locative</td>
+              </tr>
+              <tr>
+                <td>Ja</td>
+                <td>Mnie</td>
+                <td>Mi, Mnie</td>
+                <td>Mnie</td>
+                <td><span lang="pl">Mną</span></td>
+                <td>Mnie</td>
+              </tr>
+              <tr>
+                <td>Ty</td>
+                <td><span lang="pl">Cię, Ciebie</span></td>
+                <td>Ci, Tobie</td>
+                <td><span lang="pl">Cię, Ciebie</span></td>
+                <td><span lang="pl">Tobą</span></td>
+                <td>Tobie</td>
+              </tr>
+            </table>
+            <p>Longer forms in Genitive, Dative and Accusative are usually used after prepositions. Sometimes they can
+              be used in other sentences too, as an emphasis. <br><br>
+              A: Gdzie idziemy? <b>Do mnie</b> czy <b>do ciebie</b>? (Gen.) / Where are we going? To my place or to your
+              place?<br>
+              B: <b>Do ciebie</b>. / To your place. <br><br><br>
+              Singular, 3rd person
+            </p>
+            <table style="width:80%">
+              <tr>
+                <td>Nominative</td>
+                <td>Genitive</td>
+                <td>Dative</td>
+                <td>Accusative</td>
+                <td>Instrumental</td>
+                <td>Locative</td>
+              </tr>
+              <tr>
+                <td>On</td>
+                <td>Go, Jego, Niego</td>
+                <td>Mu, Jemu, Niemu</td>
+                <td>Go, Jego, Niego</td>
+                <td>Nim</td>
+                <td>Nim</td>
+              </tr>
+              <tr>
+                <td>Ona</td>
+                <td>Jej, Niej</td>
+                <td>Jej, Niej</td>
+                <td>Jej, <span lang="pl">Nią</span></td>
+                <td><span lang="pl">Nią</span></td>
+                <td>Niej</td>
+              </tr>
+              <tr>
+                <td>Ono</td>
+                <td>Go, Jego, Niego</td>
+                <td>Mu, Jemu, Niemu</td>
+                <td>Je, Nie</td>
+                <td>Nim</td>
+                <td>Nim</td>
+              </tr>
+            </table>
+            <p>The most common forms are the short ones, like go, jej, mu, nią, etc. Long forms: jego and jemu are used
+              sometimes as an emphasis. Forms starting with n letter are used after prepositions.
+              <br><br>
+              <span lang="pl">
+                A: Zaprosiłaś <b>go</b> na imprezę? / Did you invite him to the party?
+                B: Tak, ale jest zajęty. Pójdę sama, <b>bez niego</b>. / I did, but he is busy. I will go alone, without
+                him.
+              </span>
+              <br><br><br>
+              Plural, 1st and 2nd person
+            </p>
+            <table style="width:80%">
+              <tr>
+                <td>Nominative</td>
+                <td>Genitive</td>
+                <td>Dative</td>
+                <td>Accusative</td>
+                <td>Instrumental</td>
+                <td>Locative</td>
+              </tr>
+              <tr>
+                <td>My</td>
+                <td>Nas</td>
+                <td>Nam</td>
+                <td>Nas</td>
+                <td>Nami</td>
+                <td>Nas</td>
+              </tr>
+              <tr>
+                <td>Wy</td>
+                <td>Was</td>
+                <td>Wam</td>
+                <td>Was</td>
+                <td>Wami</td>
+                <td>Was</td>
+              </tr>
+            </table>
+            <p>Hopefully, the one above is clear 😊
+              <br><br><br>
+              Plural, 3rd person
+            </p>
+            <table style="width:80%">
+              <tr>
+                <td>Nominative</td>
+                <td>Genitive</td>
+                <td>Dative</td>
+                <td>Accusative</td>
+                <td>Instrumental</td>
+                <td>Locative</td>
+              </tr>
+              <tr>
+                <td>Oni</td>
+                <td>Ich, Nich</td>
+                <td>Im, Nim</td>
+                <td>Ich, Nich</td>
+                <td>Nimi</td>
+                <td>Nich</td>
+              </tr>
+              <tr>
+                <td>One</td>
+                <td>Ich, Nich</td>
+                <td>Im, Nim</td>
+                <td>Ich, Nich</td>
+                <td>Nimi</td>
+                <td>Nich</td>
+              </tr>
+            </table>
+            <p>Situation is the same as with the singular pronouns – forms starting with n are used after a preposition,
+              other than that we use the other form. In the only form starts with n, then obviously it used in every
+              context.
+              <br><br>
+              <span lang="pl">A: Ugotowałam im zupę, ale dla nich była za słona. / I made them a soup but for them it
+                was too salty.</span> <br><br><br>
+              <b>Formal/polite pronouns</b>
+            </p>
+            <table style="width:80%">
+              <tr>
+                <td>Nominative</td>
+                <td>Genitive</td>
+                <td>Dative</td>
+                <td>Accusative</td>
+                <td>Instrumental</td>
+                <td>Locative</td>
+                <td>Vocative</td>
+              </tr>
+              <tr>
+                <td>Pan</td>
+                <td>Pana</td>
+                <td>Panu</td>
+                <td>Pana</td>
+                <td>Panem</td>
+                <td>Panu</td>
+                <td>Panie</td>
+              </tr>
+              <tr>
+                <td>Pani</td>
+                <td>Pani</td>
+                <td>Pani</td>
+                <td><span lang="pl">Panią</span></td>
+                <td><span lang="pl">Panią</span></td>
+                <td>Pani</td>
+                <td>Pani</td>
+              </tr>
+            </table>
+            <table style="width:80%">
+              <tr>
+                <td>Nominative</td>
+                <td>Genitive</td>
+                <td>Dative</td>
+                <td>Accusative</td>
+                <td>Instrumental</td>
+                <td>Locative</td>
+                <td>Vocative</td>
+              </tr>
+              <tr>
+                <td>Panowie</td>
+                <td>Panów</td>
+                <td>Panom</td>
+                <td>Panów</td>
+                <td>Panami</td>
+                <td>Panach</td>
+                <td>Panowie</td>
+              </tr>
+              <tr>
+                <td>Panie</td>
+                <td><span lang="pl">Pań</span></td>
+                <td>Paniom</td>
+                <td>Panie</td>
+                <td>Paniami</td>
+                <td>Paniach</td>
+                <td>Panie</td>
+              </tr>
+            </table>
+            <table style="width:80%">
+              <tr>
+                <td>Nominative</td>
+                <td>Genitive</td>
+                <td>Dative</td>
+                <td>Accusative</td>
+                <td>Instrumental</td>
+                <td>Locative</td>
+                <td>Vocative</td>
+              </tr>
+              <tr>
+                <td><span lang="pl">Państwo</span></td>
+                <td><span lang="pl">Państwa</span></td>
+                <td><span lang="pl">Państwu</span></td>
+                <td><span lang="pl">Państwa</span></td>
+                <td><span lang="pl">Państwem</span></td>
+                <td><span lang="pl">Państwu</span></td>
+                <td><span lang="pl">Państwo</span></td>
+              </tr>
+            </table>
+            <div class="sign">
+              <p class="sign--person">written by</p>
+              <a href="about.html" target="_blank">@</a>
             </div>
           </div>
         </div>
